fixed dark mode option

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -55,6 +55,36 @@ body {
     background-color: rgb(220 53 69 / var(--tw-bg-opacity));
 }
 
+
+.toggle1{
+    position: relative;
+    height: 30px;
+    width:60px;
+    background-color: #fff;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+    cursor: pointer;
+    border-radius: 20px;
+}
+
+.toggle1::before{
+    content: "";
+    position: absolute;
+    height: 22px;
+    width: 22px;
+    background-color: #4070f4;
+    border-radius: 50%;
+    top: 50%;
+    left: 6px;
+    transform: translateY(-50%);
+    transition: all .3s ease-in-out;
+}
+
+.toggle1.active::before{
+    background-color: #18191a;
+    left: calc(100% - 20px - 6px);
+}
+
+
 @media screen and (max-width:680px) {
     .navigation {
         z-index: 2;
